--- a/index.html
+++ b/index.html
@@ -98,14 +98,17 @@
               <div class="row gtr-50">
                 <a class="image fit"><img src="images/photo.jpg" alt="" /></a>
               </div>
-              <br><br>
               <header>
-                <h3>Huang, Chen</h3>
+                <h3>Chen Huang</h3>
+                (<a class="icon fa-headphones" 
+                onclick="document.getElementById('name-audio').play();">click for pronunciation</a>)
               </header>
               <p>
-                My given name is "Chen / 晨" (<a class="icon fa-headphones" 
-                onclick="document.getElementById('name-audio').play();">click for pronunciation</a>), which means "dawn" or "early morning" in Chinese. Fittingly, I am a morning person who cherishes the tranquility of the early hours.
+                My given name is Chen (晨), which means "dawn" or "early morning" in Chinese. Fittingly, I am a morning person who cherishes the tranquility of the early hours.
                 Interestingly, the pronunciation of "Chen" is quite similar to "Cheng," which is the Chinese word for "orange / 橙." Because of this playful similarity, my friends often affectionately call me "橙子🍊", which means "orange". 
+              </p>
+              <p>
+                My surname is Huang (黄), which is deeply rooted in Chinese history and culture. Huang, meaning "yellow", is often associated with the Yellow Emperor (黄帝), a legendary figure regarded as one of the founding ancestors of Chinese civilization.
               </p>
               <audio id="name-audio">
                 <source src="audio/pronunciation_zh_chen.mp3" type="audio/mpeg">
@@ -185,7 +188,7 @@
               <hr />
               <section id="research">
                 <header>
-                  <h3>Research experience</h3>
+                  <h3>Research Experience</h3>
                 </header>
                 <p>
                   <strong><a href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/">Quantum Optics and Laser Science (QOLS) Group</a></strong>, Imperial College London<br>
