--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
               <div class="row gtr-50">
                 <a class="image fit"><img src="images/photo.jpg" alt="" /></a>
               </div>
+              <br><br>
               <header>
                 <h3>Chen Huang</h3>
                 (<a class="icon fa-headphones" 
@@ -108,7 +109,7 @@
                 Interestingly, the pronunciation of "Chen" is quite similar to "Cheng," which is the Chinese word for "orange / 橙." Because of this playful similarity, my friends often affectionately call me "橙子🍊", which means "orange". 
               </p>
               <p>
-                My surname is Huang (黄), which is deeply rooted in Chinese history and culture. Huang, meaning "yellow", is often associated with the Yellow Emperor (黄帝), a legendary figure regarded as one of the founding ancestors of Chinese civilization.
+                My surname is Huang (黄), which is deeply rooted in Chinese history and culture. Huang, meaning "yellow", is often associated with the <a href="https://en.wikipedia.org/wiki/Yellow_Emperor">Yellow Emperor (黄帝)</a>, a legendary figure regarded as one of the founding ancestors of Chinese civilization.
               </p>
               <audio id="name-audio">
                 <source src="audio/pronunciation_zh_chen.mp3" type="audio/mpeg">
