--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
               <br><br>
               <header>
                 <h3>Chen Huang</h3>
-                (<i class="icon fa-headphones" 
-                onclick="document.getElementById('name-audio').play();">click for pronunciation</i>)
+                (<u onclick="document.getElementById('name-audio').play();">click for pronunciation</u>)
               </header>
               <p>
                 My given name is Chen (晨), which means "dawn" or "early morning" in Chinese. Fittingly, I am a morning person who cherishes the tranquility of the early hours.
