--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
               <div class="row gtr-50">
                 <a class="image fit"><img src="images/photo.jpg" alt="" /></a>
               </div>
-              <br><br>
+              <br>
               <header>
                 <h3>Chen Huang</h3>
-                (<u onclick="document.getElementById('name-audio').play();">click for pronunciation</u>)
+                (<a onclick="document.getElementById('name-audio').play();">click for pronunciation</a>)
               </header>
               <p>
                 My given name is Chen (晨), which means "dawn" or "early morning" in Chinese. Fittingly, I am a morning person who cherishes the tranquility of the early hours.
