--- a/index.html
+++ b/index.html
@@ -119,9 +119,12 @@
             <hr />
             <section>
               <header>
-                <h3><a href="#">Sed lorem etiam consequat</a></h3>
+                <h3><a href="">Languages</a></h3>
               </header>
               <p>
+                <div class="progress-bar">
+                  <div class="progress" style="width: 80%;">80%</div>
+                </div>
                 Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
               </p>
               <div class="row gtr-50">
