--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                 (<a onclick="document.getElementById('name-audio').play();">Click to hear the pronunciation</a>)
               </header>
               <p>
-                My given name is Chen (晨), which means "dawn" or "early morning" in Chinese. This meaning suits me well, as I am a morning person who enjoys the calm and peacefulness of the early hours. Interestingly, "Chen" sounds similar to "Cheng", the Chinese word for "orange". Because of this playful resemblance, my friends affectionately call me "Cheng-Zi", which translates to "orange". 🍊
+                My given name is Chen, which means "dawn" or "early morning" in Chinese. This meaning suits me well, as I am a morning person who enjoys the calm and peacefulness of the early hours. Interestingly, "Chen" sounds similar to "Cheng", the Chinese word for "orange". Because of this playful resemblance, my friends affectionately call me "Cheng-Zi", which translates to "orange". 🍊
               </p>
               <p>
-                My surname is Huang (黄), which means "yellow" in Chinese. This name has deep historical and cultural roots. It is often associated with the <a href="https://en.wikipedia.org/wiki/Yellow_Emperor">Yellow Emperor</a>, a legendary figure considered one of the founding ancestors of Chinese civilization. The Yellow Emperor is credited with uniting tribes, introducing advancements like medicine and agriculture, and laying the foundation for Chinese culture and history.
+                My surname is Huang, which means "yellow" in Chinese. This name has deep historical and cultural roots. It is often associated with the <a href="https://en.wikipedia.org/wiki/Yellow_Emperor">Yellow Emperor</a>, a legendary figure considered one of the founding ancestors of Chinese civilization. The Yellow Emperor is credited with uniting tribes, introducing advancements like medicine and agriculture, and laying the foundation for Chinese culture and history.
               </p>
               <audio id="name-audio">
                 <source src="audio/pronunciation_zh_chen.mp3" type="audio/mpeg">
