--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <hr />
             <section>
               <header>
-                <h3><a href="">Languages</a></h3>
+                <h3><a>Languages</a></h3>
               </header>
               <p>
                 <div class="progress-bar">
