--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                 <h3><a>Languages</a></h3>
               </header>
               <p>
-                <div class="progress-bar">
-                  <div class="progress" style="width: 80%;">80%</div>
+                <div class="progress-container">
+                  <div class="progress-bar" id="progress-bar" style="width: 80%;">80%</div>
                 </div>
                 Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
               </p>
