--- a/index.html
+++ b/index.html
@@ -121,12 +121,16 @@
               <header>
                 <h3><a>Languages</a></h3>
               </header>
-              <p>
-                <div class="progress-container">
-                  <div class="progress-bar" id="progress-bar" style="width: 80%;">80%</div>
+              <div class="row gtr-50">
+                <div class="col-4">
+                  <strong>Chinese</strong>
                 </div>
-                Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-              </p>
+                <div class="col-8">
+                  <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 80%;"></div>
+                  </div>
+                </div>
+              </div>
               <div class="row gtr-50">
                 <div class="col-4">
                   <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
