--- a/index.html
+++ b/index.html
@@ -123,11 +123,35 @@
               </header>
               <div class="row gtr-50">
                 <div class="col-3">
-                  <strong>Chinese</strong>
+                  <strong>Mandarin</strong>
+                </div>
+                <div class="col-9">
+                  <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 100%;"></div>
+                  </div>
+                </div>
+                <div class="col-3">
+                  <strong>Hokkien</strong>
+                </div>
+                <div class="col-9">
+                  <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 95%;"></div>
+                  </div>
+                </div>
+                <div class="col-3">
+                  <strong>English</strong>
                 </div>
                 <div class="col-9">
                   <div class="progress-container">
                     <div class="progress-bar" id="progress-bar" style="width: 80%;"></div>
+                  </div>
+                </div>
+                <div class="col-3">
+                  <strong>German</strong>
+                </div>
+                <div class="col-9">
+                  <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 20%;"></div>
                   </div>
                 </div>
               </div>
