--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <source src="audio/pronunciation_zh_chen.mp3" type="audio/mpeg">
               </audio>
               <footer>
-                <a href="#" class="button">Full CV</a>
+                <a href="docs/CV_ChenHuang.pdf" class="button">Curriculum Vitae</a>
               </footer>
             </section>
             <hr />
