--- a/index.html
+++ b/index.html
@@ -119,6 +119,53 @@
             <hr />
             <section>
               <header>
+                <h3><a>Skills</a></h3>
+              </header>
+              <div class="row gtr-50">
+                <div class="col-4">
+                  <strong>Python</strong>
+                </div>
+                <div class="col-8">
+                  <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 100%;"></div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <strong>MATLAB</strong>
+                </div>
+                <div class="col-8">
+                  <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 90%;"></div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <strong>LaTeX</strong>
+                </div>
+                <div class="col-8">
+                  <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 100%;"></div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <strong>AutoCAD</strong>
+                </div>
+                <div class="col-8">
+                  <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 80%;"></div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <strong>Mathematica</strong>
+                </div>
+                <div class="col-8">
+                  <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 80%;"></div>
+                  </div>
+                </div>
+              </div>
+              <hr />
+            <section>
+              <header>
                 <h3><a>Languages</a></h3>
               </header>
               <div class="row gtr-50">
@@ -156,9 +203,6 @@
                 </div>
               </div>
               <hr />
-              <footer>
-                <a href="#" class="button">Magna Adipiscing</a>
-              </footer>
             </section>
           </div>
           <div class="col-8 col-12-mobile imp-mobile" id="content">
