--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li><a href="#">Life</a>
             <ul>
               <li><a href="photography.html">Photography</a></li>
-            </li>
+            </ul>
           </ul>
         </nav>
       </div>
@@ -163,6 +163,7 @@
                   </div>
                 </div>
               </div>
+            </section>
               <hr />
             <section>
               <header>
@@ -299,7 +300,8 @@
                 </p>
               </section>
             </article>
-          </div></div>
+          </div>
+        </div>
           
           <p>
             At Imperial College London, I focus on experimental work with
@@ -339,6 +341,7 @@
             <p>
               I am passionate about exploring the fascinating realms of Quantum
               Computing and Quantum Information. 
+            </p>
           </header>
           <div class="row">
             <article class="col-4 col-12-mobile special">
