--- a/notes.html
+++ b/notes.html
@@ -8,7 +8,7 @@
   <head>
     <title>Chen's Physics World</title>
     <meta charset="utf-8" />
-	<link rel="icon" href="images/icon.png" type="image/png" />
+    <link rel="icon" href="images/icon.png" type="image/png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
@@ -31,28 +31,30 @@
 
         <!-- Nav -->
         <nav id="nav">
-			<ul>
-			  <li><a href="index.html">Home</a></li>
-			  <li>
-				<a href="#">Research</a>
-				<ul>
-				  <li>
-					<a href="rydberg-quantum-compilation.html"
-					  >Rydberg quantum compilation</a
-					>
-				  </li>
-				  <li><a href="#">Trapped-ion quantum computing</a></li>
-				  <li><a href="#">Charge noise in semiconductor qubits</a></li>
-				</ul>
-			  </li>
-			  <li><a href="publications.html">Publications</a></li>
-			  <li><a href="notes.html">Notes</a></li>
-			  <li><a href="#">Life</a>
-			  <ul>
-				<li><a href="photography.html">Photography</a></li>
-			  </li>
-			</ul>
-		  </nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>
+              <a href="#">Research</a>
+              <ul>
+                <li>
+                  <a href="rydberg-quantum-compilation.html"
+                    >Rydberg quantum compilation</a
+                  >
+                </li>
+                <li><a href="#">Trapped-ion quantum computing</a></li>
+                <li><a href="#">Charge noise in semiconductor qubits</a></li>
+              </ul>
+            </li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="notes.html">Notes</a></li>
+            <li>
+              <a href="#">Life</a>
+              <ul>
+                <li><a href="photography.html">Photography</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
       </div>
 
       <!-- Main -->
@@ -163,56 +165,217 @@
                   <header>
                     <h3>Imperial College London 2023-2024</h3>
                   </header>
-                  <p>
-                    <ul>
-						<li>Quantum Information  [<a href="docs/notes/notes-on-quantum-information.pdf">Note</a>]</li>
-						<li>Mathematical Methods for Physicists  [<a href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf">Note</a>]  [<a href="docs/notes/revision-for-2024-mmp-exam.pdf">Review</a>]</li>
-						<li>Advanced Classical Mechanics  [<a href="docs/notes/notes-on-advanced-classical-physics.pdf">Note</a>]</li>
-						<li>Quantum Optics  [<a href="docs/notes/notes-on-quantum-optics.pdf">Note</a>]</li>
-						<li>Quantum Theory of Matter  [<a href="docs/notes/notes-on-quantum-theory-of-matter.pdf">Note</a>]</li>
-						<li>Laser Device Technology  [<a href="docs/notes/notes-on-laser-device-technology.pdf">Note</a>]</li>
-						<li>Nonlinear Optics  [<a href="docs/notes/notes-on-nonlinear-optics.pdf">Note</a>]</li>
-					  </ul>
-                  </p>
+                  <ul>
+                    <li>
+                      Quantum Information [<a
+                        href="docs/notes/notes-on-quantum-information.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                    <li>
+                      Mathematical Methods for Physicists [<a
+                        href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
+                        >Note</a
+                      >] [<a href="docs/notes/revision-for-2024-mmp-exam.pdf"
+                        >Review</a
+                      >]
+                    </li>
+                    <li>
+                      Advanced Classical Mechanics [<a
+                        href="docs/notes/notes-on-advanced-classical-physics.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                    <li>
+                      Quantum Optics [<a
+                        href="docs/notes/notes-on-quantum-optics.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                    <li>
+                      Quantum Theory of Matter [<a
+                        href="docs/notes/notes-on-quantum-theory-of-matter.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                    <li>
+                      Laser Device Technology [<a
+                        href="docs/notes/notes-on-laser-device-technology.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                    <li>
+                      Nonlinear Optics [<a
+                        href="docs/notes/notes-on-nonlinear-optics.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                  </ul>
                 </section>
-				<section>
-					<header>
-					  <h3>Huazhong University of Science and Technology 2018-2022</h3>
-					  <p>This collection includes notes from my undergraduate studies, primarily written in Chinese. They cover a mix of topics, ranging from class lectures to self-directed learning. For clarity, I've added labels to indicate the source of each note.</p>
-					</header>
-					<p>
-						<ul>
-							<li>复变函数  [<a href="docs/notes/[复变函数]期末复习笔记.pdf">Review</a>]</li>
-							<li>理论力学  [<a href="docs/notes/note-on-classical-mechanics.pdf">Note</a>]</li>
-							<li>光学  [<a href="docs/notes/[光学]课堂笔记_Part1.pdf">Note 1</a>] [<a href="docs/notes/[光学]课堂笔记_Part2.pdf">Note 2</a>] [<a href="docs/notes/[光学]课堂笔记_Part3.pdf">Note 3</a>] [<a href="docs/notes/[光学]课堂笔记_Part4.pdf">Note 4</a>]</li>
-							<li>电磁学  [<a href="docs/notes/[电磁学]期末复习笔记.pdf">Review</a>]</li>
-							<li>电动力学  [<a href="docs/notes/[电动力学]期末偷分宝典.pdf">Review</a>]</li>
-							<li>数学物理方程  [<a href="docs/notes/[数学物理方程]课堂笔记.pdf">Note</a>]</li>
-							<li>量子力学  [<a href="docs/notes/[量子力学]学习笔记.pdf">Note</a>]  [<a href="docs/notes/[量子力学]期末偷分宝典.pdf">Review</a>]</li>
-							<li>高等量子力学  [<a href="docs/notes/[高等量子力学]课堂笔记.pdf">Note</a>]</li>
-							<li>热力学与统计物理  [<a href="docs/notes/note-on-statistical-physics.pdf">Note</a>]</li>
-							<li>量子光学  [<a href="docs/notes/[量子光学]学习笔记.pdf">Note</a>]  [<a href="docs/notes/[量子光学]复习笔记.pdf">Review</a>]</li>
-							<li>固体物理  [<a href="docs/notes/[固体物理]期末复习笔记.pdf">Review</a>]</li>
-							<li>等离子体导论  [<a href="docs/notes/[等离子体导论]课堂笔记.pdf">Review</a>]</li>
-							<li>模拟电子技术  [<a href="docs/notes/[模拟电子技术]笔记_Part1.pdf">Note 1</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part2.pdf">Note 2</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part3.pdf">Note 3</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part4.pdf">Note 4</a>] [<a href="docs/notes/[模拟电子技术]笔记_Part5.pdf">Note 5</a>]</li>
-							<li>数字电子技术  [<a href="docs/notes/[数字电子技术]笔记_Part1.pdf">Note 1</a>] [<a href="docs/notes/[数字电子技术]笔记_Part2.pdf">Note 2</a>] [<a href="docs/notes/[数字电子技术]笔记_Part3.pdf">Note 3</a>] [<a href="docs/notes/[数字电子技术]笔记_Part4.pdf">Note 4</a>] [<a href="docs/notes/[数字电子技术]笔记_Part5.pdf">Note 5</a>]</li>
-						  </ul>
-					</p>
-				  </section>
+                <section>
+                  <header>
+                    <h3>
+                      Huazhong University of Science and Technology 2018-2022
+                    </h3>
+                    <p>
+                      This collection includes notes from my undergraduate
+                      studies, primarily written in Chinese. They cover a mix of
+                      topics, ranging from class lectures to self-directed
+                      learning. For clarity, I've added labels to indicate the
+                      source of each note.
+                    </p>
+                  </header>
+                  <ul>
+                    <li>
+                      复变函数 [<a href="docs/notes/[复变函数]期末复习笔记.pdf"
+                        >Review</a
+                      >]
+                    </li>
+                    <li>
+                      理论力学 [<a
+                        href="docs/notes/note-on-classical-mechanics.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                    <li>
+                      光学 [<a href="docs/notes/[光学]课堂笔记_Part1.pdf"
+                        >Note 1</a
+                      >] [<a href="docs/notes/[光学]课堂笔记_Part2.pdf"
+                        >Note 2</a
+                      >] [<a href="docs/notes/[光学]课堂笔记_Part3.pdf"
+                        >Note 3</a
+                      >] [<a href="docs/notes/[光学]课堂笔记_Part4.pdf"
+                        >Note 4</a
+                      >]
+                    </li>
+                    <li>
+                      电磁学 [<a href="docs/notes/[电磁学]期末复习笔记.pdf"
+                        >Review</a
+                      >]
+                    </li>
+                    <li>
+                      电动力学 [<a href="docs/notes/[电动力学]期末偷分宝典.pdf"
+                        >Review</a
+                      >]
+                    </li>
+                    <li>
+                      数学物理方程 [<a
+                        href="docs/notes/[数学物理方程]课堂笔记.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                    <li>
+                      量子力学 [<a href="docs/notes/[量子力学]学习笔记.pdf"
+                        >Note</a
+                      >] [<a href="docs/notes/[量子力学]期末偷分宝典.pdf"
+                        >Review</a
+                      >]
+                    </li>
+                    <li>
+                      高等量子力学 [<a
+                        href="docs/notes/[高等量子力学]课堂笔记.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                    <li>
+                      热力学与统计物理 [<a
+                        href="docs/notes/note-on-statistical-physics.pdf"
+                        >Note</a
+                      >]
+                    </li>
+                    <li>
+                      量子光学 [<a href="docs/notes/[量子光学]学习笔记.pdf"
+                        >Note</a
+                      >] [<a href="docs/notes/[量子光学]复习笔记.pdf">Review</a
+                      >]
+                    </li>
+                    <li>
+                      固体物理 [<a href="docs/notes/[固体物理]期末复习笔记.pdf"
+                        >Review</a
+                      >]
+                    </li>
+                    <li>
+                      等离子体导论 [<a
+                        href="docs/notes/[等离子体导论]课堂笔记.pdf"
+                        >Review</a
+                      >]
+                    </li>
+                    <li>
+                      模拟电子技术 [<a
+                        href="docs/notes/[模拟电子技术]笔记_Part1.pdf"
+                        >Note 1</a
+                      >] [<a href="docs/notes/[模拟电子技术]笔记_Part2.pdf"
+                        >Note 2</a
+                      >] [<a href="docs/notes/[模拟电子技术]笔记_Part3.pdf"
+                        >Note 3</a
+                      >] [<a href="docs/notes/[模拟电子技术]笔记_Part4.pdf"
+                        >Note 4</a
+                      >] [<a href="docs/notes/[模拟电子技术]笔记_Part5.pdf"
+                        >Note 5</a
+                      >]
+                    </li>
+                    <li>
+                      数字电子技术 [<a
+                        href="docs/notes/[数字电子技术]笔记_Part1.pdf"
+                        >Note 1</a
+                      >] [<a href="docs/notes/[数字电子技术]笔记_Part2.pdf"
+                        >Note 2</a
+                      >] [<a href="docs/notes/[数字电子技术]笔记_Part3.pdf"
+                        >Note 3</a
+                      >] [<a href="docs/notes/[数字电子技术]笔记_Part4.pdf"
+                        >Note 4</a
+                      >] [<a href="docs/notes/[数字电子技术]笔记_Part5.pdf"
+                        >Note 5</a
+                      >]
+                    </li>
+                  </ul>
+                </section>
                 <section>
                   <header>
                     <h3>PKU 2020 Summer</h3>
                   </header>
-                  <p>
-                    <ul>
-						<li>量子力学(II) <a href="docs/notes/Ch1_Phase in QM.pdf">Chapter 1: Phase in quantum mechanics</a></li>
-						<li>量子力学(II) <a href="docs/notes/Ch2_Path Integral Formalism of QM.pdf">Chapter 2: Path integral formalism of quantum mechanics</a></li>
-						<li>量子力学(II) <a href="docs/notes/Ch3_The WKB Approximation.pdf">Chapter 3: The WKB approximation</a></li>
-						<li>量子力学(II) <a href="docs/notes/Ch4_Rotation And Vibration of Molecules.pdf">Chapter 4: Rotation and vibration of molecules</a></li>
-						<li>量子力学(II) <a href="docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf">Chapter 5: Variation principle</a></li>
-						<li>量子力学(II) <a href="docs/notes/Ch6_Introduction to Many-body Theory.pdf">Chapter 6: Introduction to many-body theory</a></li>
-					  </ul>
-                  </p>
+                  <ul>
+                    <li>
+                      量子力学(II)
+                      <a href="docs/notes/Ch1_Phase in QM.pdf"
+                        >Chapter 1: Phase in quantum mechanics</a
+                      >
+                    </li>
+                    <li>
+                      量子力学(II)
+                      <a href="docs/notes/Ch2_Path Integral Formalism of QM.pdf"
+                        >Chapter 2: Path integral formalism of quantum
+                        mechanics</a
+                      >
+                    </li>
+                    <li>
+                      量子力学(II)
+                      <a href="docs/notes/Ch3_The WKB Approximation.pdf"
+                        >Chapter 3: The WKB approximation</a
+                      >
+                    </li>
+                    <li>
+                      量子力学(II)
+                      <a
+                        href="docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
+                        >Chapter 4: Rotation and vibration of molecules</a
+                      >
+                    </li>
+                    <li>
+                      量子力学(II)
+                      <a
+                        href="docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
+                        >Chapter 5: Variation principle</a
+                      >
+                    </li>
+                    <li>
+                      量子力学(II)
+                      <a
+                        href="docs/notes/Ch6_Introduction to Many-body Theory.pdf"
+                        >Chapter 6: Introduction to many-body theory</a
+                      >
+                    </li>
+                  </ul>
                 </section>
               </article>
             </div>
