--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           </header>
           <footer>
             <a href="#main" class="button scrolly">Start</a>
+            <a class="image fit"><img src="images/icon.png" alt="" /></a>
           </footer>
         </div>
 
