--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
             <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
-            <a href="#main" class="button scrolly">Start</a>
-            <a class="image fit"><img src="images/icon.png" alt="" /></a>
+            <a href="#main" class="button scrolly"
+              ><img src="images/icon.png" alt=""
+            /></a>
           </footer>
         </div>
 
