--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
-            <a href="#main" class="button scrolly"
+            <a href="#main" class="image scrolly"
               ><img src="images/icon.png" alt=""
             /></a>
           </footer>
