--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
           </header>
           <footer>
             <a href="#main" class="image scrolly"
-              ><img src="images/icon.png" alt=""
-            /></a>
+              ><img src="images/icon.png" alt="" /><span class="label"
+                >Start</span
+              ></a
+            >
           </footer>
         </div>
 
