--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@
             <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
-            <a href="#main" class="image small scrolly"
-              ><img src="images/icon.png" alt="" /><span class="label"
-                >Start</span
-              ></a
-            >
+            <a href="#main" class="icon fa-angles-down scrolly"></a>
           </footer>
         </div>
 
