--- a/notes.html
+++ b/notes.html
@@ -394,28 +394,28 @@
                   <li>
                     <a
                       href="mailto:chen.huang23@imperial.ac.uk"
-                      class="icon fa-envelope"
+                      class="fa-solid fa-envelope"
                       ><span class="label">Email</span></a
                     >
                   </li>
                   <li>
                     <a
                       href="https://github.com/chenx820"
-                      class="icon brands fa-github"
+                      class="fa-brands fa-github"
                       ><span class="label">GitHub</span></a
                     >
                   </li>
                   <li>
                     <a
                       href="https://www.zhihu.com/people/huang-chen-54-4"
-                      class="icon brands fa-zhihu"
+                      class="fa-brands fa-zhihu"
                       ><span class="label">Zhihu</span></a
                     >
                   </li>
                   <li>
                     <a
                       href="https://www.linkedin.com/in/chen-huang-820x/"
-                      class="icon brands fa-linkedin-in"
+                      class="fa-brands fa-linkedin-in"
                       ><span class="label">Linkedin</span></a
                     >
                   </li>
