--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
               </li>
             </ul>
             <hr />
-            <p>Welcome to Chen's Physics World!</p>
+            <p>
+              <a href="#main" class="scrolly"
+                >Welcome to Chen's Physics World!</a
+              >
+            </p>
           </header>
           <footer>
             <a href="#main" class="fa-solid fa-angles-down scrolly"></a>
