--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <li>
                 <a
                   href="mailto:chen.huang23@imperial.ac.uk"
-                  class="fa-solid fa-envelope"
+                  class="icon fa-solid fa-envelope"
                   ><span class="label">Email</span></a
                 >
               </li>
