--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -272,7 +272,7 @@
             <!-- Tweets -->
             <section class="col-4 col-12-mobile">
               <header>
-                <h2 class="fa-brands fa-twitter circled">
+                <h2 class="icon fa-brands fa-twitter circled">
                   <span class="label">Tweets</span>
                 </h2>
               </header>
@@ -405,32 +405,32 @@
                 </p>
                 <ul class="icons">
                   <li>
-                    <a href="#" class="fa-brands fa-twitter"
+                    <a href="#" class="icon fa-brands fa-twitter"
                       ><span class="label">Twitter</span></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="fa-brands fa-facebook-f"
+                    <a href="#" class="icon fa-brands fa-facebook-f"
                       ><span class="label">Facebook</span></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="fa-brands fa-instagram"
+                    <a href="#" class="icon fa-brands fa-instagram"
                       ><span class="label">Instagram</span></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="fa-brands fa-pinterest"
+                    <a href="#" class="icon fa-brands fa-pinterest"
                       ><span class="label">Pinterest</span></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="fa-brands fa-dribbble"
+                    <a href="#" class="icon fa-brands fa-dribbble"
                       ><span class="label">Dribbble</span></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="fa-brands fa-linkedin-in"
+                    <a href="#" class="icon fa-brands fa-linkedin-in"
                       ><span class="label">Linkedin</span></a
                     >
                   </li>
