--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
               <li>
                 <a
                   href="mailto:chen.huang23@imperial.ac.uk"
-                  class="icon fa-solid fa-envelope"
+                  class="icon icon fa-solid fa-envelope"
                   ><span class="label">Email</span></a
                 >
               </li>
               <li>
                 <a
                   href="https://github.com/chenx820"
-                  class="fa-brands fa-github"
+                  class="icon fa-brands fa-github"
                   ><span class="label">GitHub</span></a
                 >
               </li>
               <li>
                 <a
                   href="https://www.zhihu.com/people/huang-chen-54-4"
-                  class="fa-brands fa-zhihu"
+                  class="icon fa-brands fa-zhihu"
                   ><span class="label">Zhihu</span></a
                 >
               </li>
               <li>
                 <a
                   href="https://www.linkedin.com/in/chen-huang-820x/"
-                  class="fa-brands fa-linkedin-in"
+                  class="icon fa-brands fa-linkedin-in"
                   ><span class="label">Linkedin</span></a
                 >
               </li>
@@ -65,7 +65,7 @@
             </p>
           </header>
           <footer>
-            <a href="#main" class="fa-solid fa-angles-down scrolly"></a>
+            <a href="#main" class="icon fa-solid fa-angles-down scrolly"></a>
           </footer>
         </div>
 
@@ -518,28 +518,28 @@
                   <li>
                     <a
                       href="mailto:chen.huang23@imperial.ac.uk"
-                      class="fa-solid fa-envelope"
+                      class="icon fa-solid fa-envelope"
                       ><span class="label">Email</span></a
                     >
                   </li>
                   <li>
                     <a
                       href="https://github.com/chenx820"
-                      class="fa-brands fa-github"
+                      class="icon fa-brands fa-github"
                       ><span class="label">GitHub</span></a
                     >
                   </li>
                   <li>
                     <a
                       href="https://www.zhihu.com/people/huang-chen-54-4"
-                      class="fa-brands fa-zhihu"
+                      class="icon fa-brands fa-zhihu"
                       ><span class="label">Zhihu</span></a
                     >
                   </li>
                   <li>
                     <a
                       href="https://www.linkedin.com/in/chen-huang-820x/"
-                      class="fa-brands fa-linkedin-in"
+                      class="icon fa-brands fa-linkedin-in"
                       ><span class="label">Linkedin</span></a
                     >
                   </li>
