--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li>
                 <a
                   href="https://www.zhihu.com/people/huang-chen-54-4"
-                  class="icon fa-brands fa-zhihu"
+                  class="fa-brands fa-zhihu"
                   ><span class="label">Zhihu</span></a
                 >
               </li>
