--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
               <li>
                 <a
                   href="https://github.com/chenx820"
-                  class="icon fa-brands fa-github"
+                  class="icon fa-github"
                 ></a>
               </li>
               <li>
                 <a
                   href="https://www.zhihu.com/people/huang-chen-54-4"
                   class="fa-brands fa-zhihu"
-                  ></a
-                >
+                ></a>
               </li>
               <li>
                 <a
