--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li>
                 <a
                   href="https://github.com/chenx820"
-                  class="icon fa-github"
+                  class="fa-brands fa-github"
                 ></a>
               </li>
               <li>
@@ -50,7 +50,7 @@
               <li>
                 <a
                   href="https://www.linkedin.com/in/chen-huang-820x/"
-                  class="icon fa-brands fa-linkedin-in"
+                  class="fa-brands fa-linkedin-in"
                   ><span class="label">Linkedin</span></a
                 >
               </li>
