--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </p>
           </header>
           <footer>
-            <a href="#main" class="icon fa-solid fa-angles-down scrolly"></a>
+            <a href="#main" class="fa-solid fa-angles-down scrolly"></a>
           </footer>
         </div>
 
