--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
               <li>
                 <a
                   href="https://github.com/chenx820"
-                  class="fa-brands fa-github"
+                  class="icon fa-brands fa-github"
                 ></a>
               </li>
               <li>
                 <a
                   href="https://www.zhihu.com/people/huang-chen-54-4"
-                  class="fa-brands fa-zhihu"
+                  class="icon fa-brands fa-zhihu"
                 ></a>
               </li>
               <li>
                 <a
                   href="https://www.linkedin.com/in/chen-huang-820x/"
-                  class="fa-brands fa-linkedin-in"
+                  class="icon fa-brands fa-linkedin-in"
                 ></a>
               </li>
             </ul>
