--- a/index.html
+++ b/index.html
@@ -38,20 +38,23 @@
               <li>
                 <a
                   href="https://github.com/chenx820"
-                  class="icon fa-brands fa-github"
-                ></a>
+                  class="icon brands fa-github"
+                  ><span class="label">GitHub</span></a
+                >
               </li>
               <li>
                 <a
                   href="https://www.zhihu.com/people/huang-chen-54-4"
-                  class="icon fa-brands fa-zhihu"
-                ></a>
+                  class="icon brands fa-zhihu"
+                  ><span class="label">Zhihu</span></a
+                >
               </li>
               <li>
                 <a
                   href="https://www.linkedin.com/in/chen-huang-820x/"
-                  class="icon fa-brands fa-linkedin-in"
-                ></a>
+                  class="icon brands fa-linkedin-in"
+                  ><span class="label">Linkedin</span></a
+                >
               </li>
             </ul>
             <hr />
