--- a/publications.html
+++ b/publications.html
@@ -142,27 +142,27 @@
                     <a
                       href="mailto:chen.huang23@imperial.ac.uk"
                       class="icon fa-solid fa-envelope"
-                      ></a
+                      ><span class="label">Email</span></a
                     >
                   </li>
                   <li>
                     <a
                       href="https://github.com/chenx820"
-                      class="icon fa-brands fa-github"
+                      class="icon brands fa-github"
                       ><span class="label">GitHub</span></a
                     >
                   </li>
                   <li>
                     <a
                       href="https://www.zhihu.com/people/huang-chen-54-4"
-                      class="icon fa-brands fa-zhihu"
+                      class="icon brands fa-zhihu"
                       ><span class="label">Zhihu</span></a
                     >
                   </li>
                   <li>
                     <a
                       href="https://www.linkedin.com/in/chen-huang-820x/"
-                      class="icon fa-brands fa-linkedin-in"
+                      class="icon brands fa-linkedin-in"
                       ><span class="label">Linkedin</span></a
                     >
                   </li>
