--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <hr />
             <p>
               <a href="#main" class="scrolly"
-                >Welcome to Chen's Physics World!</a
+                ><span class="label">Welcome to Chen's Physics World!</span></a
               >
             </p>
           </header>
