--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </p>
           </header>
           <footer>
-            <a href="#main" class="fa-solid fa-angle-double-down scrolly"></a>
+            <a href="#main" class="fa-angle-double-down scrolly"></a>
           </footer>
         </div>
 
