--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
               </li>
             </ul>
             <hr />
-            <p>
-              <a href="#main" class="scrolly"
-                ><span class="label">Welcome to Chen's Physics World!</span></a
-              >
-            </p>
+            <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
             <a href="#main" class="fa-angle-double-down scrolly"></a>
