--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
-            <a href="#main" class="fa-angle-double-down scrolly"></a>
+            <a href="#main" class="icon fa-angle-double-down scrolly"></a>
           </footer>
         </div>
 
