--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
                 >
               </li>
             </ul>
-            <hr />
+            <br />
             <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
-            <a href="#main" class="icon fa-solid fa-angle-down scrolly"><span class="label">Start</span></a>
+            <a href="#main" class="icon fa-solid fa-angle-down scrolly"
+              ><span class="label">Start</span></a
+            >
           </footer>
         </div>
 
